--- a/templates/10_prompt.bash.j2
+++ b/templates/10_prompt.bash.j2
@@ -1,9 +1,11 @@
+{% raw %}
 function last2pwd {
   tmp=${PWD%/*/*};
   [ ${#tmp} -gt 0 -a "$tmp" != "$PWD" ] && echo ${PWD:${#tmp}+1} || echo $PWD;
 }
+{% endraw %}
 
 [ -n "$SSH_CLIENT" ] && text=" REMOTE"
-#export PS1='${debian_chroot:+($debian_chroot)}\[\033[01;32m\]\u@$(hostname)\[\033[00m\]\[\033[1;31m\]${text}\[\033[00m\]:\[\033[01;34m\]$(last2pwd)\[\033[00m\]\$ '
-export PS1='${debian_chroot:+($debian_chroot)}\[\e[0;33m\]\u@$(hostname)\[\033[00m\]\[\033[1;31m\]${text}\[\033[00m\]:\[\033[01;34m\]$(last2pwd)\[\033[00m\]\$ '
+#export PS1='${debian_chroot:+($debian_chroot)}\[\033[01;32m\]\u@inventory_hostname\[\033[00m\]\[\033[1;31m\]${text}\[\033[00m\]:\[\033[01;34m\]$(last2pwd)\[\033[00m\]\$ '
+export PS1='${debian_chroot:+($debian_chroot)}\[\e[0;33m\]\u@{{inventory_hostname}}\[\033[00m\]\[\033[1;31m\]${text}\[\033[00m\]:\[\033[01;34m\]$(last2pwd)\[\033[00m\]\$ '
 
